[project]
name = "nova"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "customtkinter>=5.2.2",
    "llama-index>=0.14.7",
    "llama-index-embeddings-ollama>=0.8.3",
    "llama-index-llms-ollama>=0.9.0",
    "loadenv>=0.1.1",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "piper-tts>=1.3.0",
    "pyttsx3>=2.99",
    "scipy>=1.16.3",
    "sounddevice>=0.5.3",
]
