[project]
name = "nova"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "customtkinter>=5.2.2",
    "dotenv>=0.9.9",
    "llama-index>=0.14.8",
    "llama-index-embeddings-ollama>=0.8.4",
    "llama-index-llms-ollama>=0.9.0",
    "piper-tts>=1.3.0",
    "scipy>=1.16.3",
    "sounddevice>=0.5.3",
]
